Added basic crud route for restaurants. Getting to know the stack

--- a/api/package.json
+++ b/api/package.json
@@ -16,9 +16,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "jest": "^26.0.1",
+    "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
     "prettier": "^2.0.5",
+    "rust-result": "^1.0.0",
     "sequelize": "^5.21.11",
     "sequelize-typescript": "^1.1.0",
     "source-map-support": "^0.5.19",
