Added yarn.lock file to Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,11 +4,13 @@ ARG BUILD_ENV=development
 WORKDIR /app
 
 COPY ./api/package.json /app
+COPY ./api/yarn.lock /app
+
 RUN yarn add global typescript
 RUN yarn add global tsc-watch
 RUN yarn add global pg
 
-RUN yarn
+RUN yarn install --force
 
 COPY ./api /app
 
